--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
-  }
+  },
+    "engines": {
+      "node":"14.16.0",
+      "npm":"6.14.11"
+    }
 }
